opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/jane-street-tests"
bug-reports: "https://github.com/janestreet/jane-street-tests/issues"
dev-repo: "git+https://github.com/janestreet/jane-street-tests.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "core"
  "jbuilder"                {build & >= "1.0+beta8"}
  "ppx_driver"
  "ppx_jane"
  "toplevel_expect_test"
  "ocaml-migrate-parsetree" {>= "0.4"}
  "ocamlbuild"
]
available: [ ocaml-version >= "4.04.1" ]
descr: "
Tests for Jane Street packages

This packages only tests that the various Jane Street components such
as inline tests work as expected in the opensource world.

It installs nothing.
"
